--- a/MM_replication_Report_JiaxingWei.ipynb
+++ b/MM_replication_Report_JiaxingWei.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Market Making with Signals through Deep Reinforcement Learning #\n",
     "\n",
-    "[Paper: Market Making with signals through DRL (GAŠPEROV et. al., 2021)](docs/ref/Market_Making_With_Signals_Through_Deep_Reinforcement_Learning.pdf)\n",
+    "<!-- [Paper: Market Making with signals through DRL (GAŠPEROV et. al., 2021)](docs/ref/Market_Making_With_Signals_Through_Deep_Reinforcement_Learning.pdf) -->\n",
     "\n",
     "Author: Kas Wei\n",
     "\n",
@@ -343,11 +343,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ef4ea7fb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# run backtest on test sets, using stored agent models\n",
     "def run_drl_backtest(symbol, method_name, weight_path, bundle, phi, fee_rate, train_stats):\n",
     "    s1, s2, mid, ask, bid, b_max, s_min = bundle \n",
     "\n",
@@ -970,7 +971,7 @@
    "id": "544217ed",
    "metadata": {},
    "source": [
-    "## Part 5: Fee Test\n",
+    "## Part 5: Extension Test\n",
     "\n",
     "In this part, the strategy will be examined by deducting transaction costs:\n",
     "\n",
@@ -1044,16 +1045,6 @@
    ],
    "source": [
     "run_agent_training_pipeline(symbol='510300', sgu_train_range=(20240401, 20240528), PHI=0.0001, TICK_SIZE=0.001, fee_rate=0.00003, USE_FEE=True, USE_ARL=False, nb_mode=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7ba3f50b",
-   "metadata": {},
-   "source": [
-    "## Conclusion ##\n",
-    "\n",
-    "The orange line with significant positive slope proves that DRL could automatically increase skewness in orders as the inventory level increases."
    ]
   }
  ],
