--- a/MM_replication_Report_JiaxingWei.ipynb
+++ b/MM_replication_Report_JiaxingWei.ipynb
@@ -55,6 +55,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "951f54c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To run in a new environment, ensure requirements.txt is in the same directory.\n",
+    "# Uncomment the lines below to install:\n",
+    "\n",
+    "# import sys\n",
+    "# !{sys.executable} -m pip install -r requirements.txt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "130ea531",
    "metadata": {},
